[project]
name = "fraud-data-pipeline-bi"
version = "0.1.0"
description = "Production-style batch ETL pipeline for fraud analytics (CSV -> Postgres -> SQL exports + quality report)."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "pandas>=2.2",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]